# sensemaking

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: jg_image_id.ipynb  twinner_analysis.ipynb
sensemaking/: __init__.py  dataset.py  features.py  plots.py
sensemaking/modeling/: predict.py  train.py
