[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sensemaking"
version = "0.0.1"
description = "Analysis of analysts"
authors = [
  { name = "James Glenister" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["sensemaking"]
include = ["pyproject.toml", "sensemaking/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sensemaking"]
force-sort-within-sections = true


[tool.poetry.dependencies]
awscli = "^1.40.10"
ipython = "^9.2.0"
jupyterlab = "^4.4.2"
loguru = "^0.7.3"
matplotlib = "^3.10.1"
mkdocs = "^1.6.1"
notebook = "^7.4.2"
numpy = "^2.2.5"
pandas = "^2.2.3"
pip = "^25.1.1"
pytest = "^8.3.5"
python-dotenv = "^1.1.0"
ruff = "^0.11.8"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
typer = "^0.15.3"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
